--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,16 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="WhatsApp group chat stats (NHS)" />
+  <meta name="description" content="WhatsApp group chat stats" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DDCYT15E8H"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-DDCYT15E8H');
+  </script>
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
